# hermes-govee

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
hermes_govee/: __init__.py  animations.py  client.py  utils.py
hermes_govee/core/: __init__.py  exceptions.py  models.py  snapshot.py  transport.py
hermes_govee/devices/: __init__.py  base.py  group.py  light.py
hermes_govee/presets/: __init__.py  ambiences.py  colors.py
tests/: test_client.py  test_exceptions.py  test_light.py  test_models.py  test_transport.py
